# zig-clear-dir

./: .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon  mise.toml  smoke.json
.agents/skills/zig-windows-performance/: SKILL.md
.agents/skills/zig-windows-performance/agents/: openai.yaml
.agents/skills/zig-windows-performance/references/: concurrency-io.md  hot-paths.md  measurement.md  windows-filesystem.md
apps/desktop/: Cargo.toml
apps/desktop/src/: main.rs
apps/desktop/ui/: main.slint
crates/application/: Cargo.toml
crates/application/src/: lib.rs  ports.rs  use_cases.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs  models.rs  rules.rs
crates/platform/: Cargo.toml
crates/platform/src/: fs_backend.rs  lib.rs  system_exclusions.rs
crates/preferences/: Cargo.toml
crates/preferences/src/: json_store.rs  lib.rs  sqlite_store.rs
docs/: SIZING_PERFORMANCE_GUIDE.md  STRUCTURE_AND_RULES.md  performance.md
docs/windows/: scan-native-api.md
src/: main.zig  root.zig  test_runner.zig
src/core/: config.zig  default_rules.zig  regex_lite.zig  remover.zig  rules.zig  scanner.zig  snapshot.zig  string_lists.zig
src/platform/: fs_adapter.zig  mod.zig  posix_fs.zig  posix_size.zig  size_common.zig  windows_fs.zig  windows_size.zig
