[workspace]
members = [
    "crates/domain",
    "crates/application",
    "crates/platform",
    "crates/preferences",
    "apps/desktop",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
walkdir = "2.5"
dirs = "6.0"
slint = "1.14"
tokio = { version = "1.48", features = ["rt-multi-thread", "sync"] }
tempfile = "3.23"
eframe = "0.33"
rfd = "0.15"
