[package]
name = "platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
application = { path = "../application" }
domain = { path = "../domain" }
walkdir.workspace = true
rayon = "1.11"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile.workspace = true
